# age.nvim

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  crates.js  flake.nix  help.html  justfile  settings.html  src-files.js  test.txt.age
.github/workflows/: docs.yml  static.yml
age/: all.html  index.html
doc/: age.txt  just.txt
examples/: decrypt_api.lua
examples/method-1/: README.md  age.lua
examples/method-2/: age.lua  secret.lua
examples/method-3/: age.lua
search.index/: root.js
search.index/crateNames/: 59397609744a.js
src/: command.rs  config.rs  core.rs  crypt.rs  error.rs  lib.rs  mail.rs  types.rs
src/age/: command.rs.html  config.rs.html  core.rs.html  crypt.rs.html  error.rs.html  lib.rs.html  types.rs.html
tests/: i_am_groot.txt.age  i_am_groot_armored.txt.age  justfile  test.args.txt  test_key.txt
tests/some/dir/: file.txt.age
tests/types/some_dirs/: file.txt  file.txt.age
