[package]
name = "age_nvim"
version = "2.0.3"
edition = "2021"
license = "GPL-3.0-or-later"
authors = ["Abhinandh S <abhinandhsuby@proton.me>"]
description = "Neovim plugin for encrypting and decrypting text files inside neovim using age with ease."
homepage = "https://github.com/abhinandh-s/age.nvim"
documentation = "https://github.com/abhinandh-s/age.nvim"
categories = ["command-line-utilities"]
keywords = ["tool", "utility"]

[features]
default = []
dev = []

[dependencies]
nvim-oxi = { version = "0.6.0", features = ["neovim-0-10"] }
age = "0.11.1"
chrono = "0.4.41"

[lib]
name = "age"
crate-type = ["cdylib"]

[profile.release]
panic = 'abort'
codegen-units = 1
opt-level = 'z'
lto = true
debug = "none"
strip = "symbols"
debug-assertions = false
overflow-checks = false

[lints.rust]
unsafe_code = "forbid"
unused_labels = "allow"

[lints.clippy]
unwrap_used = "forbid"
enum_glob_use = "deny"
type_complexity = "deny"
redundant_closure = "deny"
str_to_string = "deny"
